--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://ramcmana.github.io/satellite_experience/pages/index_v2.html">
+<meta http-equiv="refresh" content="0; url=https://ramcmana2.github.io/satellite_experience/pages/index.html">
