--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Launch Page</title>
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/high_contrast_styles.css" />
   </head>
   <body>
     <div id="container">
