--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/high_contrast_styles_v2.css" />
     <title>Loading</title>
     <style>
         /* Body styling */
@@ -33,7 +34,6 @@
             position: absolute;
             bottom: 0px;
         }
-      
 
         /* Loader styling */
         .loader {
