Removed color: #000000 from .loading-content

--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -32,7 +32,7 @@
 
         /* Content styling */
         .content {
-            color: #000000;
+            /*color: #000000;*/
             position: absolute;
             bottom: 0px;
         }
