--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -31,7 +31,7 @@
 
         /* Content styling */
         .content {
-            /*color: #000000;*/
+            color: #000000;
             position: absolute;
             bottom: 0px;
         }
