--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -50,7 +50,8 @@
           var launchButton = document.getElementById("launch-button");
   
           launchButton.addEventListener("click", function() {
-              window.location.href = "main_page.html";
+              //window.location.href = "main_page.html";
+              window.location.href = "main_page_v2.html";
           });
       });
       </script>
