--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -17,8 +17,7 @@
 
         /* Loading container styling */
         .loading-container {
-            /*background-color: #20162F;*/
-            background-color: #FFFFFF;
+            background-color: #20162F;
             padding: 20px;
             max-width: 375px;
             margin: 0 auto;
@@ -31,17 +30,14 @@
 
         /* Content styling */
         .content {
-            color: #000000;
             position: absolute;
             bottom: 0px;
         }
 
         /* Loader styling */
         .loader {
-          /*border: 10px solid #f3f3f3; /* Light grey */
-          border: 10px solid #000000;
-          /*border-top: 10px solid #A5405C; /* Psyche pink/red color */
-          border-top: 10px solid #F99F02;
+          border: 10px solid #f3f3f3; /* Light grey */
+          border-top: 10px solid #A5405C; /* Psyche pink/red color */
           border-radius: 70%;
           width: 50px;
           height: 50px;
