--- a/satellite_experience/pages/loading_page_v2.html
+++ b/satellite_experience/pages/loading_page_v2.html
@@ -16,7 +16,7 @@
         }
 
         /* Loading container styling */
-        .loading-container {
+        .loading-container_v2 {
             /*background-color: #20162F;*/
             background-color: #FFFFFF;
             padding: 20px;
@@ -56,7 +56,7 @@
 </head>
 <body>
     <!-- Loading Container -->
-    <div class="loading-container">
+    <div class="loading-container_v2">
         <!-- Content -->
         <div class="content">
             <div class="loader"></div> 
