--- a/satellite_experience/pages/settings_page.html
+++ b/satellite_experience/pages/settings_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings Page</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/high_contrast_styles.css">
 </head>
 <body>
     <!-- Settings Container -->
