--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Launch Page</title>
     <link rel="stylesheet" href="../assets/css/styles.css" />
+    <script src="../assets/js/sfx.js"></script>
     <script src="../assets/js/index.js" defer></script>
 </head>
 
