--- a/satellite_experience/pages/main_page.html
+++ b/satellite_experience/pages/main_page.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
     <link rel="stylesheet" type="text/css" href="../assets/css/styles.css" />
+    <script src="../assets/js/sfx.js"></script>
     <!-- Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- GLTFLoader -->
