Added sfx.js to loading_page.html

--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -50,6 +50,7 @@
           100% { transform: rotate(360deg); }
         }
     </style>
+    <script src="../assets/js/sfx.js"></script>
 </head>
 <body>
     <!-- Loading Container -->
