Trying playsinline=true

--- a/satellite_experience/pages/loading_page.html
+++ b/satellite_experience/pages/loading_page.html
@@ -60,6 +60,7 @@
             <div class="loader"></div> 
             <div><p>Loading...</p></div>
         </div>
-  </div>
+    </div>
+    <audio src="../audio/launch.wav" playsinline="true"></audio>
 </body>
 </html>
