Audio HTML element

--- a/satellite_experience/pages/main_page.html
+++ b/satellite_experience/pages/main_page.html
@@ -63,6 +63,9 @@
     </div>
 
     <script src="../assets/js/main.js" type="module"></script>
+    <audio id="sound" autoplay>
+      <source id="open_mp3" src="../audio/open_mp3.mp3" type="audio/mpeg"></source>
+    </audio>
   </body>
 </html>
 
