Testing US101Task166

--- a/satellite_experience/pages/instrument_content.html
+++ b/satellite_experience/pages/instrument_content.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    <!-- Close Modal -->
-    <span id="instrument-modal-close" class="modal-close">&times;</span>
+    <div id="instrument-content">
+        <!-- Close Modal -->
+        <span id="instrument-modal-close" class="modal-close">&times;</span>
 
-    <!-- Instrument Title -->
-    <div id="instrument-title-container">
-        <h2 id="instrument-title"></h2>
-    </div>
+        <!-- Instrument Title -->
+        <div id="instrument-title-container">
+            <h2 id="instrument-title"></h2>
+        </div>
 
-    <!-- Instrument Content -->
-    <div id="instrument-content-container">
-        <p id="instrument-description"></p>
-        <img id="instrument-image" src="" alt="" style="display: none;" />
+        <!-- Instrument Content -->
+        <div id="instrument-content-container">
+            <p id="instrument-description"></p>
+            <img id="instrument-image" src="" alt="" style="display: none;" />
+        </div>
     </div>
 </body>
 </html>
