--- a/satellite_experience/pages/main_page.html
+++ b/satellite_experience/pages/main_page.html
@@ -56,15 +56,12 @@
     </div>
 
     <!-- Main Container -->
-    <div id="main-container">
-      <!-- Main Content -->
-      <div id="main-content"></div>
+    <div id="main-container"></div>
 
-      <!-- Buttons to Navigate -->
-      <div class="navigation-button-container">
-        <button class="navigation-button" id="upper-button">Explore Mission</button>
-        <button class="navigation-button" id="lower-button">Explore Instruments</button>
-      </div>
+    <!-- Buttons to Navigate -->
+    <div class="navigation-button-container">
+      <button class="navigation-button" id="upper-button">Explore Mission</button>
+      <button class="navigation-button" id="lower-button">Explore Instruments</button>
     </div>
 
     <!-- Loading page -->
