--- a/satellite_experience/pages/mission_content.html
+++ b/satellite_experience/pages/mission_content.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    <p>Mission Content</p>
+    <div id="mission-content">
+        <!-- Phase Title -->
+        <div id="phase-title-container">
+            <h2 id="phase-title"></h2>
+        </div>
+
+        <!-- Phase Content -->
+        <div id="phase-content-container">
+            <p id="phase-description"></p>
+            <img id="phase-image" src="" alt="" style="display: none;" />
+        </div>
+    </div>
+
+    <!-- Buttons to Transition Between Phases -->
+    <div id="phase-transition-button-container">
+        <button id="left-phase-transition-button">Previous Phase</button>
+        <button id="right-phase-transition-button">Next Phase</button>
+    </div>
 </body>
 </html>
