--- a/satellite_experience/pages/main_content.html
+++ b/satellite_experience/pages/main_content.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    <p>Main Content</p>
+    <div id="progress-content">
+        
+    </div>
 </body>
 </html>
