--- a/satellite_experience/pages/main_content.html
+++ b/satellite_experience/pages/main_content.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Content</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
-</head>
-<body>
-    <div id="progress-content">
-        
-    </div>
-</body>
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+  </head>
+  <body>
+    <div id="distanceTag">Main1</div>
+  </body>
 </html>
+
