New launch image, 2 tabs per phase, etc.

--- a/satellite_experience/pages/mission_content.html
+++ b/satellite_experience/pages/mission_content.html
@@ -22,8 +22,8 @@
 
     <!-- Buttons to Transition Between Phases -->
     <div id="phase-transition-button-container">
-        <button id="left-phase-transition-button">Previous Phase</button>
-        <button id="right-phase-transition-button">Next Phase</button>
+        <button id="left-phase-transition-button">Previous</button>
+        <button id="right-phase-transition-button">Next</button>
     </div>
 </body>
 </html>
