--- a/satellite_experience/pages/main_content.html
+++ b/satellite_experience/pages/main_content.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
   <body>
-    <div id="distanceTag">Main1</div>
+    <div id = distanceFields>
+      <div class="distance">
+        <div class="distanceHeading" > DISTANCE TRAVELED </div>
+        <div id="distanceTag">1</div>
+      </div>
+      <div class="distance">
+        <div class="distanceHeading" > DISTANCE REMAINING </div>
+        <div id="distanceLeft">2</div>
+      </div>
+    </div>
+      <div id="timeRemaining"class="distance"> 
+        T-Minus 10 Seconds
+      </div>
   </body>
 </html>
 
