Testing dev before feedback

--- a/satellite_experience/pages/help_modal.html
+++ b/satellite_experience/pages/help_modal.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Help Container -->
-    <div class="modal-container">
+    <div id="help-modal-container-id" class="modal-container">
       <!-- Logo -->
       <div class="modal-logo-container">
         <img
