--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Settings Container -->
-    <div class="modal-container">
+    <div id = "modal-container-id"class="modal-container">
       <!-- Logo -->
       <div class="modal-logo-container">
         <img
