--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -72,39 +72,44 @@
           />
         </div>
       </div>
-
-      <div class="fade-in-section">
-        <div class="psyche-info">
-          <div class="psyche-info-line">Explore the full mission.</div>
-          <div class="psyche-info-line">
-            Watch the launch of the spacecraft.
-          </div>
-          <div class="psyche-info-line">View the approach of Psyche.</div>
-          <div class="psyche-info-line">
-            Watch as we uncover the origins of Psyche
-          </div>
+        <div class="fade-in-section">
+            <div class="psyche-info">
+                <div class="psyche-info-line"> Explore the current mission progress</div>
+                <div class="psyche-info-line"> See the distance traveled.</div>
+                <div class="psyche-info-line"> Countdown to the arrival.</div>
+            </div>
+            <div class="psyche-satellite-img">
+                <img src="../assets/images/main_content.png" alt="Psyche Satellite Image" />
+            </div>
         </div>
-        <div class="psyche-satellite-img">
-          <img
-            src="../assets/images/mission_content.png"
-            alt="Psyche Satellite Image"
-          />
-        </div>
-      </div>
 
-      <div id="disclaimer">
-        This work was created in partial fulfillment of Arizona State University
-        Capstone Course SER 401. The work is a result of the Psyche Student
-        Collaborations component of NASA’s Psyche Mission
-        (https://psyche.asu.edu). “Psyche: A Journey to a Metal World” [Contract
-        number NNM16AA09C] is part of the NASA Discovery Program mission to
-        solar system targets. Trade names and trademarks of ASU and NASA are
-        used in this work for identification only. Their usage does not
-        constitute an official endorsement, either expressed or implied, by
-        Arizona State University or National Aeronautics and Space
-        Administration. The content is solely the responsibility of the authors
-        and does not necessarily represent the official views of ASU or NASA.
-      </div>
+        <div class="fade-in-section">
+            <div class="psyche-info">
+                <div class="psyche-info-line"> Explore the spacecraft with your phone.</div>
+                <div class="psyche-info-line"> Checkout the spacecraft's equipment</div>
+                <div class="psyche-info-line"> Learn of the mission's experiments</div>
+            </div>
+            <div class="psyche-satellite-img">
+                <img src="../assets/images/instruments_content.png" alt="Psyche Satellite Image" />
+            </div>
+        </div>
+
+        <div class="fade-in-section">
+            <div class="psyche-info">
+                <div class="psyche-info-line"> Explore the full mission.</div>
+                <div class="psyche-info-line"> Watch the launch of the spacecraft.</div>
+                <div class="psyche-info-line"> View the approach of Psyche.</div>
+                <div class="psyche-info-line"> Watch as we uncover the origins of Psyche</div>
+            </div>
+            <div class="psyche-satellite-img">
+                <img src="../assets/images/mission_content.png" alt="Psyche Satellite Image" />
+            </div>
+        </div>
+
+        <div id="disclaimer">
+            This work was created in partial fulfillment of Arizona State University Capstone Course SER 401. The work is a result of the Psyche Student Collaborations component of NASA’s Psyche Mission (https://psyche.asu.edu).
+            “Psyche: A Journey to a Metal World” [Contract number NNM16AA09C] is part of the NASA Discovery Program mission to solar system targets. Trade names and trademarks of ASU and NASA are used in this work for identification only. Their usage does not constitute an official endorsement, either expressed or implied, by Arizona State University or National Aeronautics and Space Administration. The content is solely the responsibility of the authors and does not necessarily represent the official views of ASU or NASA.
+        </div>
     </div>
   </body>
 </html>
