Misc improvements and info updates

--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -35,13 +35,13 @@
       </div>
 
       <div class="psyche-info" style="margin-top: 0px">
-        Clicking the Launch AR Experience button will start an interactive
+        Clicking the "Launch AR Experience" button will start an interactive
         experience that will explore the Psyche Mission.
       </div>
 
       <div class="fade-in-section">
           <div class="psyche-info">
-              <div class="psyche-info-line"> Explore the current mission progress</div>
+              <div class="psyche-info-line"> Explore the current mission progress.</div>
               <div class="psyche-info-line"> See the distance traveled.</div>
               <div class="psyche-info-line"> Countdown to the arrival.</div>
           </div>
@@ -53,8 +53,8 @@
       <div class="fade-in-section">
           <div class="psyche-info">
               <div class="psyche-info-line"> Explore the spacecraft with your phone.</div>
-              <div class="psyche-info-line"> Checkout the spacecraft's equipment</div>
-              <div class="psyche-info-line"> Learn of the mission's experiments</div>
+              <div class="psyche-info-line"> Checkout the spacecraft's equipment.</div>
+              <div class="psyche-info-line"> Learn about the mission's experiments.</div>
           </div>
           <div class="psyche-satellite-img">
               <img src="../assets/images/instruments_content.png" alt="Psyche Satellite Image" />
@@ -66,7 +66,7 @@
               <div class="psyche-info-line"> Explore the full mission.</div>
               <div class="psyche-info-line"> Watch the launch of the spacecraft.</div>
               <div class="psyche-info-line"> View the approach of Psyche.</div>
-              <div class="psyche-info-line"> Watch as we uncover the origins of Psyche</div>
+              <div class="psyche-info-line"> Watch as we uncover the origins of Psyche.</div>
           </div>
           <div class="psyche-satellite-img">
               <img src="../assets/images/mission_content.png" alt="Psyche Satellite Image" />
