--- a/satellite_experience/pages/instrument_content.html
+++ b/satellite_experience/pages/instrument_content.html
@@ -1,26 +1,34 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instrument Content</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+  </head>
+  <body>
     <div id="instrument-content">
-        <!-- Close Modal -->
-        <span id="instrument-modal-close" class="modal-close">&times;</span>
+      <!-- Close Modal -->
+      <span id="instrument-modal-close" class="modal-close">&times;</span>
 
-        <!-- Instrument Title -->
-        <div id="instrument-title-container">
-            <h2 id="instrument-title"></h2>
-        </div>
+      <!-- Instrument Title -->
+      <div id="instrument-title-container">
+        <h2 id="instrument-title"></h2>
+      </div>
 
-        <!-- Instrument Content -->
-        <div id="instrument-content-container">
-            <p id="instrument-description"></p>
-            <img id="instrument-image" src="" alt="" style="display: none;" />
-        </div>
+      <!-- Instrument Content -->
+      <div id="instrument-content-container">
+        <p id="instrument-description"></p>
+        <img id="instrument-image" src="" alt="" style="display: none" />
+      </div>
     </div>
-</body>
+    <!-- Buttons to Transition Between Instruments -->
+    <div id="instrument-transition-button-container">
+      <button id="left-instrument-transition-button">
+        Previous Instrument
+      </button>
+      <button id="right-instrument-transition-button">Next Instrument</button>
+    </div>
+  </body>
 </html>
+
