Add profile picture and bio to about page

--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -71,11 +71,11 @@
         </div>
 
         <div class="team-member">
-          <div class="pfp-container"></div>
+          <div class="pfp-container" style="background-image: url('../assets/images/ramcmana_pfp.jpg'); background-size: cover;"></div>
           <div class="name-container">
-            <div class="role">TODO</div>
+            <div class="role">Full-Stack Software Engineer</div>
             <div class="name">Ryan McManamy</div>
-            <div class="bio">TODO Bio</div>
+            <div class="bio">ASU Software Engineering major with subsidiary interests in philosophy, music, and games. Regards coffee as a necessity. Believes that perpetual motion is possible. Obstinate proponent of the Gambler's Fallacy.</div>
           </div>
         </div>
 
