--- a/satellite_experience/pages/main_content.html
+++ b/satellite_experience/pages/main_content.html
@@ -10,11 +10,11 @@
     <div id = distanceFields>
       <div class="distance">
         <div class="distanceHeading" > DISTANCE TRAVELED </div>
-        <div id="distanceTag">1</div>
+        <div class="distanceInfo" id="distanceTag">1</div>
       </div>
       <div class="distance">
         <div class="distanceHeading" > DISTANCE REMAINING </div>
-        <div id="distanceLeft">2</div>
+        <div class="distanceInfo" id="distanceLeft">2</div>
       </div>
     </div>
       <div id="timeRemaining"class="distance"> 
@@ -22,4 +22,3 @@
       </div>
   </body>
 </html>
-
