--- a/satellite_experience/pages/mission_content.html
+++ b/satellite_experience/pages/mission_content.html
@@ -19,12 +19,14 @@
             <img id="phase-image" src="" alt="" style="display: none;" />
             <iframe id="phase-video" src=""></iframe>
         </div>
+        
+        <!-- Buttons to Transition Between Phases -->
+        <div id="phase-transition-button-container">
+            <button id="left-phase-transition-button">Previous Phase</button>
+            <button id="right-phase-transition-button">Next Phase</button>
+        </div>
     </div>
 
-    <!-- Buttons to Transition Between Phases -->
-    <div id="phase-transition-button-container">
-        <button id="left-phase-transition-button">Previous</button>
-        <button id="right-phase-transition-button">Next</button>
-    </div>
+
 </body>
 </html>
