Citations, footer, and back button

--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <div class="about-title">
+        <button onclick="history.back()">Back</button>
         <img
           src="../assets/images/Psyche_Icon_Color-SVG.svg"
           alt="Psyche Icon"
@@ -99,11 +100,13 @@
           NASA/JPL-Caltech: Radio Science, NASA/JPL-Caltech: Deep Space Optical
           Communication (DSOC)
         </div>
-        <div class="citation-section-title">Audio Resources Used:</div>
-        <div class="citation-section">TODO</div>
         <div class="citation-section-title">Other:</div>
-        <div class="citation-section">TODO</div>
+        <div class="citation-section">Maxar Technologies: Psyche Spacecraft, NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)</div>
       </div>
     </div>
+    <footer>
+      <div class="about-title">
+      </div>
+    </footer>
   </body>
 </html>
