Added disclaimer and edited button

--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="../assets/css/about.css" />
   </head>
   <body>
-    <button onclick="history.back()">Back</button>
     <div class="container">
       <div class="about-title">
+        <div>
+          <button onclick="history.back()">Back</button>
+        </div>
         <img
           src="../assets/images/Psyche_Icon_Color-SVG.svg"
           alt="Psyche Icon"
@@ -90,21 +92,25 @@
         </div>
       </div>
 
+      <div class="citation-container">
+        <div class="citation-title">Citations</div>
+        <div class="citation-section-title">Photo Resources Used:</div>
+        <div class="citation-section">
+          NASA/Kim Shiflett, ESO/LAM, NASA/JPL-Caltech/ASU/MSSS: The Psyche
+          Multispectral Imager, Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray
+          and Neutron Spectrometer, NASA/JPL-Caltech: Psyche Magnetometer,
+          NASA/JPL-Caltech: Radio Science, NASA/JPL-Caltech: Deep Space Optical
+          Communication (DSOC)
+        </div>
+        <div class="citation-section-title">Other:</div>
+        <div class="citation-section">Maxar Technologies: Psyche Spacecraft, NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)</div>
+      </div>
     </div>
     <footer>
       <div class="about-title">
-        <div class="citation-container">
-          <div class="citation-title">Citations</div>
-          <div class="citation-section-title">Photo Resources Used:</div>
-          <div class="citation-section">
-            NASA/Kim Shiflett, ESO/LAM, NASA/JPL-Caltech/ASU/MSSS: The Psyche
-            Multispectral Imager, Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray
-            and Neutron Spectrometer, NASA/JPL-Caltech: Psyche Magnetometer,
-            NASA/JPL-Caltech: Radio Science, NASA/JPL-Caltech: Deep Space Optical
-            Communication (DSOC)
-          </div>
-          <div class="citation-section-title">Other:</div>
-          <div class="citation-section">Maxar Technologies: Psyche Spacecraft, NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)</div>
+        <div class="citation-title">
+            This work was created in partial fulfillment of Arizona State University Capstone Course SER 401. The work is a result of the Psyche Student Collaborations component of NASA’s Psyche Mission (https://psyche.asu.edu).
+            “Psyche: A Journey to a Metal World” [Contract number NNM16AA09C] is part of the NASA Discovery Program mission to solar system targets. Trade names and trademarks of ASU and NASA are used in this work for identification only. Their usage does not constitute an official endorsement, either expressed or implied, by Arizona State University or National Aeronautics and Space Administration. The content is solely the responsibility of the authors and does not necessarily represent the official views of ASU or NASA.
         </div>
       </div>
     </footer>
