--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -8,16 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <button onclick="history.back()">Back</button>
-      </div>
       <div class="about-title">
-        <img
-          src="../assets/images/Psyche_Icon_Color-SVG.svg"
-          alt="Psyche Icon"
-          id="psyche-icon"
-          class="logo"
-        />
+        <button id="psyche-icon" onclick="history.back()">Back</button>
         <header><h1>About the Team</h1></header>
       </div>
       <div class="team-container">
@@ -29,7 +21,7 @@
         <div class="team-member">
           <div class="pfp-container">
             <img
-              src="../assets/images/user.png"
+              src="../assets/images/sun.png"
               alt="anonymous pfp"
               class="pfp-icon"
             />
