--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -88,20 +88,18 @@
         <div class="citation-title">Citations</div>
         <div class="citation-section-title">Photo Resources Used:</div>
         <div class="citation-section">
-          ________________________________________________________________________________<br>
           NASA/Kim Shiflett<br>
           ESO/LAM<br>
           NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager<br>
           Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer<br>
           NASA/JPL-Caltech: Psyche Magnetometer<br>
           NASA/JPL-Caltech: Radio Science<br>
-          NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)<br>
+          NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)
         </div>
         <div class="citation-section-title">Other:</div>
         <div class="citation-section">
-          ________________________________________________________________________________<br>
           Maxar Technologies: Psyche Spacecraft<br>
-          NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)<br>
+          NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)
         </div>
       </div>
     </div>
