--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -17,89 +17,91 @@
         <div class="group">18E: AR/XR - ASU SE</div>
       </div>
 
-      <div class="about-container">
-        <div class="team-member">
-          <div class="pfp-container">
-            <img
-              src="../assets/images/help_icon.png"
-              alt="anonymous pfp"
-              class="pfp-icon"
-            />
+      <div class="content-container">
+        <div class="about-container">
+          <div class="team-member">
+            <div class="pfp-container">
+              <img
+                src="../assets/images/help_icon.png"
+                alt="anonymous pfp"
+                class="pfp-icon"
+              />
+            </div>
+            <div class="name-container">
+              <div class="role">Full-Stack Software Engineer</div>
+              <div class="name">Ryan Dinville</div>
+              <div class="bio">
+                A software engineering student with three years of coding
+                experience. I'm driven by curiosity and a desire to create
+                efficient, impactful software that makes a difference.
+              </div>
+            </div>
           </div>
-          <div class="name-container">
-            <div class="role">Full-Stack Software Engineer</div>
-            <div class="name">Ryan Dinville</div>
-            <div class="bio">
-              A software engineering student with three years of coding
-              experience. I'm driven by curiosity and a desire to create
-              efficient, impactful software that makes a difference.
+
+          <div class="team-member">
+            <div
+              class="pfp-container"
+              style="
+                background-image: url(&quot;../assets/images/Emily_PFP.jpg&quot;);
+                background-size: cover;
+              "
+            ></div>
+            <div class="name-container">
+              <div class="role">Full-Stack Software Engineer</div>
+              <div class="name">Emily Dinaro</div>
+              <div class="bio">
+                A photography enthusiast living in Denver, CO. I dream of
+                supporting my community, helping reduce our impacts on the planet
+                while systemically building equity.
+              </div>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <div class="pfp-container" style="background-image: url('../assets/images/Nicole_PFP.jpg'); background-size: cover;"></div>
+            <div class="name-container">
+              <div class="role">Full-Stack Software Engineer</div>
+              <div class="name">Nicole Garcia</div>
+              <div class="bio">Passionate about art, music, reading, and exploring the world of natural health and apothecary. I have a deep curiosity for learning, especially about how things work, how to fix them, and the science behind well-being.</div>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <div class="pfp-container" style="background-image: url('../assets/images/ramcmana_pfp.jpg'); background-size: cover;"></div>
+            <div class="name-container">
+              <div class="role">Full-Stack Software Engineer</div>
+              <div class="name">Ryan McManamy</div>
+              <div class="bio">ASU Software Engineering major with subsidiary interests in philosophy, music, and games. Regards coffee as a necessity. Believes that perpetual motion is possible. Obstinate proponent of the Gambler's Fallacy.</div>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <div class="pfp-container" style="background-image: url('../assets/images/collin_pfp.png'); background-size: cover;"></div>
+            <div class="name-container">
+              <div class="role">Full-Stack Software Engineer</div>
+              <div class="name">Collin Miller</div>
+              <div class="bio">An ardent creator, I enjoy everything from cartography to programming to drawing. In general, I'm fascinated by stories and the story of humanity is the most interesting of all.</div>
             </div>
           </div>
         </div>
 
-        <div class="team-member">
-          <div
-            class="pfp-container"
-            style="
-              background-image: url(&quot;../assets/images/Emily_PFP.jpg&quot;);
-              background-size: cover;
-            "
-          ></div>
-          <div class="name-container">
-            <div class="role">Full-Stack Software Engineer</div>
-            <div class="name">Emily Dinaro</div>
-            <div class="bio">
-              A photography enthusiast living in Denver, CO. I dream of
-              supporting my community, helping reduce our impacts on the planet
-              while systemically building equity.
-            </div>
+        <div class="citation-container">
+          <div class="citation-title">Citations</div>
+          <div class="citation-section-title">Photo Resources Used:</div>
+          <div class="citation-section">
+            NASA/Kim Shiflett<br>
+            ESO/LAM<br>
+            NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager<br>
+            Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer<br>
+            NASA/JPL-Caltech: Psyche Magnetometer<br>
+            NASA/JPL-Caltech: Radio Science<br>
+            NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)
           </div>
-        </div>
-
-        <div class="team-member">
-          <div class="pfp-container" style="background-image: url('../assets/images/Nicole_PFP.jpg'); background-size: cover;"></div>
-          <div class="name-container">
-            <div class="role">Full-Stack Software Engineer</div>
-            <div class="name">Nicole Garcia</div>
-            <div class="bio">Passionate about art, music, reading, and exploring the world of natural health and apothecary. I have a deep curiosity for learning, especially about how things work, how to fix them, and the science behind well-being.</div>
+          <div class="citation-section-title">Other:</div>
+          <div class="citation-section">
+            Maxar Technologies: Psyche Spacecraft<br>
+            NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)
           </div>
-        </div>
-
-        <div class="team-member">
-          <div class="pfp-container" style="background-image: url('../assets/images/ramcmana_pfp.jpg'); background-size: cover;"></div>
-          <div class="name-container">
-            <div class="role">Full-Stack Software Engineer</div>
-            <div class="name">Ryan McManamy</div>
-            <div class="bio">ASU Software Engineering major with subsidiary interests in philosophy, music, and games. Regards coffee as a necessity. Believes that perpetual motion is possible. Obstinate proponent of the Gambler's Fallacy.</div>
-          </div>
-        </div>
-
-        <div class="team-member">
-          <div class="pfp-container" style="background-image: url('../assets/images/collin_pfp.png'); background-size: cover;"></div>
-          <div class="name-container">
-            <div class="role">Full-Stack Software Engineer</div>
-            <div class="name">Collin Miller</div>
-            <div class="bio">An ardent creator, I enjoy everything from cartography to programming to drawing. In general, I'm fascinated by stories and the story of humanity is the most interesting of all.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="citation-container">
-        <div class="citation-title">Citations</div>
-        <div class="citation-section-title">Photo Resources Used:</div>
-        <div class="citation-section">
-          NASA/Kim Shiflett<br>
-          ESO/LAM<br>
-          NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager<br>
-          Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer<br>
-          NASA/JPL-Caltech: Psyche Magnetometer<br>
-          NASA/JPL-Caltech: Radio Science<br>
-          NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)
-        </div>
-        <div class="citation-section-title">Other:</div>
-        <div class="citation-section">
-          Maxar Technologies: Psyche Spacecraft<br>
-          NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)
         </div>
       </div>
     </div>
