--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -89,22 +89,28 @@
           <div class="citation-title">Citations</div>
           <div class="citation-section-title">Photo Resources Used:</div>
           <div class="citation-section">
-            NASA/Kim Shiflett<br>
-            ESO/LAM<br>
-            NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager<br>
-            Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer<br>
-            NASA/JPL-Caltech: Psyche Magnetometer<br>
-            NASA/JPL-Caltech: Radio Science<br>
-            NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)
+            <ul>
+              <li>NASA/Kim Shiflett</li>
+              <li>ESO/LAM</li>
+              <li>NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager</li>
+              <li>Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer</li>
+              <li>NASA/JPL-Caltech: Psyche Magnetometer</li>
+              <li>NASA/JPL-Caltech: Radio Science</li>
+              <li>NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)</li>
+            </ul>
+            
           </div>
           <div class="citation-section-title">Other:</div>
           <div class="citation-section">
-            Maxar Technologies: Psyche Spacecraft<br>
-            NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)
+            <ul>
+              <li>Maxar Technologies: Psyche Spacecraft</li>
+              <li>NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+
     <footer>
       <div class="about-title">
         <div class="disclaimer">
