Settings radio buttons test1

--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -25,6 +25,7 @@
       <div class="modal-content">
         <!-- Default ModeContent -->
         <div class="settings-modal-default-mode">
+          <input class="invisibuttons" type="button" onclick="setSetting('default-mode')"/>
           <label for="default-mode">
             <span>Default Mode</span>
           </label>
