Testing button two

--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -39,6 +39,7 @@
 
         <!-- High Contrast Mode Content -->
         <div class="settings-modal-high-contrast-mode">
+          <input class="invisibuttons" id="button1" type="button"/>
           <label for="high-contrast-mode">
             <span>High Contrast Mode</span>
           </label>
