--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -53,6 +53,7 @@
 
         <!-- Light Mode Content -->
         <div class="settings-modal-light-mode">
+          <input class="invisibuttons" id="button2" type="button"/>
           <label for="light-mode">
             <span>Light Mode</span>
           </label>
@@ -66,6 +67,7 @@
 
         <!-- Color-blind Mode Content -->
         <div class="settings-modal-color-blind-mode">
+          <input class="invisibuttons" id="button3" type="button"/>
           <label for="color-blind-mode">
             <span>Color-blind Mode</span>
           </label>
