Replaced div with button

--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -24,8 +24,7 @@
       <!-- Content -->
       <div class="modal-content">
         <!-- Default ModeContent -->
-        <input class="invisibuttons" id="button0" type="button"/>
-        <div class="settings-modal-default-mode">
+        <input class="invisibuttons" id="button0" type="button">
           
           <label for="default-mode">
             <span>Default Mode</span>
@@ -36,7 +35,7 @@
             name="setting"
             value="default-mode"
           />
-        </div>
+        </input>
 
         <!-- High Contrast Mode Content -->
         <input class="invisibuttons" id="button1" type="button"/>
