--- a/satellite_experience/pages/settings_modal.html
+++ b/satellite_experience/pages/settings_modal.html
@@ -24,8 +24,9 @@
       <!-- Content -->
       <div class="modal-content">
         <!-- Default ModeContent -->
-        <input class="invisibuttons" id="button0" type="button">
-          
+        
+        <div class="settings-modal-default-mode">
+          <input class="invisibuttons" id="button0" type="button"/>
           <label for="default-mode">
             <span>Default Mode</span>
           </label>
@@ -35,7 +36,7 @@
             name="setting"
             value="default-mode"
           />
-        </input>
+        </div>
 
         <!-- High Contrast Mode Content -->
         <input class="invisibuttons" id="button1" type="button"/>
