--- a/lore_and_mythology_experience/pages/main_page - Copy.html
+++ b/lore_and_mythology_experience/pages/main_page - Copy.html
@@ -14,15 +14,11 @@
     <div class="main-title">Find the Psyche Metorite To Start the Journey.</div>
 
     <!-- Help Icon Button -->
-    <img src="../assets/images/help_icon.png" onclick="document.getElementById('help_modal').style.display='block'" id="help-icon-button"/>
-      <div id="help_modal">
-        <div>
-          <span onclick="document.getElementById('help_modal').style.display='none'">&times;</span>
-          <img src="../assets/images/help_icon.png"/>
-          <img src="../assets/images/help_icon.png"/>
-          <img src="../assets/images/help_icon.png"/>
-        </div>
-      </div>
+    <img
+      src="../assets/images/help_icon.png"
+      alt="Help Icon"
+      id="help-icon-button"
+    />
 
     <!-- Settings Icon Button -->
     <img
