--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -17,10 +17,10 @@
     <img src="../assets/images/help_icon.png" onclick="document.getElementById('help_modal').style.display='block'" id="help-icon-button"/>
       <div id="help_modal">
         <div>
+          <img src="../assets/images/papyrus_scroll_horizontal.png"/>
           <span onclick="document.getElementById('help_modal').style.display='none'">&times;</span>
-          <img src="../assets/images/help_icon.png"/>
-          <img src="../assets/images/help_icon.png"/>
-          <img src="../assets/images/help_icon.png"/>
+          <img src="../assets/images/swipe.png"/>
+          <img src="../assets/images/tap.png"/>
         </div>
       </div>
 
